--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,11 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>gazebo_plugins</depend>
+  <depend>roscpp</depend>
+  <depend>std_srvs</depend>
+  <depend>std_msgs</depend>
+  <depend>message_generation</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
