--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
   <depend>std_srvs</depend>
   <depend>std_msgs</depend>
   <depend>message_generation</depend>
+  <depend>libqt5-widgets</depend>
+  <depend>qtbase5-dev</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
