Add lift common code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,11 @@ link_directories(${GAZEBO_LIBRARY_DIRS})
 add_library(rmf_sim_utils src/utils.cpp)
 target_link_libraries(rmf_sim_utils ${GAZEBO_LIBRARIES})
 
+add_library(lift_common src/lift_common.cpp)
+target_link_libraries(lift_common ${GAZEBO_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(lift_common ${catkin_EXPORTED_TARGETS})
+
+
 add_library(toggle_floors SHARED ${headers_MOC} src/toggle_floors.cpp)
 target_link_libraries(toggle_floors ${GAZEBO_LIBRARIES}
   ${Qt5Core_LIBRARIES}
