--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>std_srvs</depend>
   <depend>std_msgs</depend>
   <depend>message_generation</depend>
+  <depend>lb_navigation_msgs</depend>
   <depend>libqt5-widgets</depend>
   <depend>qtbase5-dev</depend>
 
